1) Refactored getLastRevisionId() to getHEADRevisionId(). The name seemed to be confusing since it was misused in many places. 2) Fixed endRevision references in ALL Repository implementations 3) Added --branches and --remotes to ALL git log calls 4) Added //FIXME markers for temporary workarounds (to be deleted my Kim urgently!)